--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "requests>=2.31.0",
     "pandas>=2.2.1",
+    "python-dateutil>=2.9.0.post0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
