--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,6 @@ authors = [
 ]
 dependencies = [
     "requests>=2.31.0",
-    "pandas>=2.2.1",
-    "python-dateutil>=2.9.0.post0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -20,6 +18,7 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = []
+virtual = true
 
 [tool.hatch.metadata]
 allow-direct-references = true
