--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,24 +21,24 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+#      -
+#        name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
       -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          push: false
           file: ./Dockerfile
-          tags: "${{ github.repository }}:latest"
-      -
+          push: false
+          tags: discordsearchscraper:latest
+      - 
         name: docker-slim GitHub Action
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
         with: 
           # Target container image (name or ID)
-          target: "${{ github.repository }}:latest"
+          target: discordsearchscraper:latest
           overwrite: true
       -
         name: Login to Docker Hub
@@ -48,5 +48,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         run: 
-           docker tag ${{ github.repository }}:latest ${{ secrets.DOCKERHUB_USERNAME }}${{ github.repository }}:latest
-           docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:latest
+           docker tag discordsearchscraper:latest ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+           docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
