--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,9 +21,9 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
-#      -
-#        name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       -
         name: Build and push
         uses: docker/build-push-action@v5
