--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
           file: ./Dockerfile
           pull: false
           push: false
+          load: true
           tags: discordsearchscraper:latest
           platforms: linux/amd64,linux/arm64
       - 
