--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,8 @@ jobs:
           load: true
           tags: discordsearchscraper:latest
           platforms: linux/amd64,linux/arm64
+      - name: List Docker images
+        run: docker images
       - 
         name: docker-slim GitHub Action
         uses: kitabisa/docker-slim-action@v1.1.1
