--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,25 +25,40 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and push
+        name: Build image (amd64)
         uses: docker/build-push-action@v5
         with:
           file: ./Dockerfile
           pull: false
           push: false
-          tags: discordsearchscraper:latest
-          platforms: linux/amd64,linux/arm64
-      - 
-        name: List Docker images
-        run: docker images
-      - 
-        name: docker-slim GitHub Action
+          tags: discordsearchscraper:amd64
+          platforms: linux/amd64
+      -
+        name: docker-slim (amd64)
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
           DSLIM_PULL: false
-        with: 
-          target: discordsearchscraper:latest
+        with:
+          target: discordsearchscraper:amd64
+          overwrite: true
+      -
+        name: Build image (arm64)
+        uses: docker/build-push-action@v5
+        with:
+          file: ./Dockerfile
+          pull: false
+          push: false
+          tags: discordsearchscraper:arm64
+          platforms: linux/arm64
+      -
+        name: docker-slim (arm64)
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+        with:
+          target: discordsearchscraper:arm64
           overwrite: true
       -
         name: Login to Docker Hub
@@ -51,7 +66,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
+      -
+        name: Push images to Docker Hub
         run: |
-           docker tag discordsearchscraper:latest ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
-           docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
