--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
           file: ./Dockerfile
           pull: false
           push: false
+          load: true
           tags: discordsearchscraper:amd64
           platforms: linux/amd64
       -
@@ -49,6 +50,7 @@ jobs:
           file: ./Dockerfile
           pull: false
           push: false
+          load: true
           tags: discordsearchscraper:arm64
           platforms: linux/arm64
       -
