--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,26 +24,26 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      # -
-      #   name: Build image (amd64)
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     file: ./Dockerfile
-      #     pull: false
-      #     push: false
-      #     load: true
-      #     tags: discordsearchscraper:amd64
-      #     platforms: linux/amd64
-      # -
-      #   name: docker-slim (amd64)
-      #   uses: kitabisa/docker-slim-action@v1.1.1
-      #   env:
-      #     DSLIM_HTTP_PROBE: false
-      #     DSLIM_PULL: false
-      #     DSLIM_IMAGE_BUILD_ARCH: amd64
-      #   with:
-      #     target: discordsearchscraper:amd64
-      #     overwrite: true
+      -
+        name: Build image (amd64)
+        uses: docker/build-push-action@v5
+        with:
+          file: ./Dockerfile
+          pull: false
+          push: false
+          load: true
+          tags: discordsearchscraper:amd64
+          platforms: linux/amd64
+      -
+        name: docker-slim (amd64)
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+          DSLIM_IMAGE_BUILD_ARCH: amd64
+        with:
+          target: discordsearchscraper:amd64
+          overwrite: true
       -
         name: Build image (arm64)
         uses: docker/build-push-action@v5
@@ -73,4 +73,7 @@ jobs:
       -
         name: Push images to Docker Hub
         run: |
+          docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
