--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,9 +71,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Push images to Docker Hub
+        name: Tag images
         run: |
           docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
           docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+      -
+        name: Create and push manifest list
+        run: |
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
