--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,44 +25,23 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build image (amd64)
+        name: Build and push
         uses: docker/build-push-action@v5
         with:
           file: ./Dockerfile
           pull: false
           push: false
           load: true
-          tags: discordsearchscraper:amd64
-          platforms: linux/amd64
-      -
-        name: docker-slim (amd64)
+          tags: discordsearchscraper:latest
+          platforms: linux/amd64,linux/arm64
+      - 
+        name: docker-slim GitHub Action
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
           DSLIM_PULL: false
-          DSLIM_IMAGE_BUILD_ARCH: amd64
-        with:
-          target: discordsearchscraper:amd64
-          overwrite: true
-      -
-        name: Build image (arm64)
-        uses: docker/build-push-action@v5
-        with:
-          file: ./Dockerfile
-          pull: false
-          push: false
-          load: true
-          tags: discordsearchscraper:arm64
-          platforms: linux/arm64
-      -
-        name: docker-slim (arm64)
-        uses: kitabisa/docker-slim-action@v1.1.1
-        env:
-          DSLIM_HTTP_PROBE: false
-          DSLIM_PULL: false
-          DSLIM_IMAGE_BUILD_ARCH: arm64
-        with:
-          target: discordsearchscraper:arm64
+        with: 
+          target: discordsearchscraper:latest
           overwrite: true
       -
         name: Login to Docker Hub
@@ -70,15 +49,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Tag images
+      - 
         run: |
-          docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
-          docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-      -
-        name: Create and push manifest list
-        run: |
-          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest \
-            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
-            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
-          docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+           docker tag discordsearchscraper:latest ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+           docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
