--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
           file: ./Dockerfile
           pull: false
           push: true
-          tags: discordsearchscraper:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
           platforms: linux/amd64,linux/arm64
       - 
         name: docker-slim GitHub Action
