--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,21 +6,61 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+env:
+  REGISTRY_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper
 
+jobs:
   build:
-  
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
 
-    permissions:
-      actions: write
-      contents: read
-          
     steps:
+      -
+        name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       -
         name: Checkout
         uses: actions/checkout@v4
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build image
+        uses: docker/build-push-action@v5
+        with:
+          file: ./Dockerfile
+          pull: false
+          push: false
+          load: true
+          tags: discordsearchscraper:${{ env.PLATFORM_PAIR }}
+          platforms: ${{ matrix.platform }}
+      -
+        name: docker-slim
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+          DSLIM_IMAGE_BUILD_ARCH: ${{ env.PLATFORM_PAIR }}
+        with:
+          target: discordsearchscraper:${{ env.PLATFORM_PAIR }}
+          overwrite: true
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -28,26 +68,63 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+      -
+        name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      -
+        name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      -
+        name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Build and push
-        uses: docker/build-push-action@v5
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          file: ./Dockerfile
-          pull: false
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
-          platforms: linux/amd64,linux/arm64
-      - 
-        name: docker-slim GitHub Action
-        uses: kitabisa/docker-slim-action@v1.1.1
-        env:
-          DSLIM_HTTP_PROBE: false
-          DSLIM_PULL: true
-        with: 
-          target: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
-          overwrite: true
-      - 
+          images: ${{ env.REGISTRY_IMAGE }}
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Create manifest list and push
+        working-directory: /tmp/digests
         run: |
-           docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+      -
+        name: Inspect image
+        run: |
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
