--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,19 +22,8 @@ jobs:
 
     steps:
       -
-        name: Prepare
-        run: |
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
-      -
         name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -42,89 +31,61 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
         name: Build image
         uses: docker/build-push-action@v5
         with:
+          context: .
           file: ./Dockerfile
-          pull: false
+          platforms: ${{ matrix.platform }}
           push: false
           load: true
-          tags: discordsearchscraper:${{ env.PLATFORM_PAIR }}
-          platforms: ${{ matrix.platform }}
+          tags: discordsearchscraper:${{ matrix.platform }}
       -
         name: docker-slim
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
           DSLIM_PULL: false
-          DSLIM_IMAGE_BUILD_ARCH: ${{ env.PLATFORM_PAIR }}
+          DSLIM_IMAGE_BUILD_ARCH: ${{ matrix.platform }}
         with:
-          target: discordsearchscraper:${{ env.PLATFORM_PAIR }}
+          target: discordsearchscraper:${{ matrix.platform }}
           overwrite: true
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push by digest
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: ${{ matrix.platform }}
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
-      -
-        name: Export digest
+        name: Tag image
         run: |
-          mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
+          docker tag discordsearchscraper:${{ matrix.platform }} ${{ env.REGISTRY_IMAGE }}:${{ matrix.platform }}
       -
-        name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-${{ env.PLATFORM_PAIR }}
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
+        name: Push image
+        run: |
+          docker push ${{ env.REGISTRY_IMAGE }}:${{ matrix.platform }}
 
   merge:
     runs-on: ubuntu-latest
-    needs:
-      - build
+    needs: build
+
     steps:
-      -
-        name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/digests
-          pattern: digests-*
-          merge-multiple: true
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Create manifest list and push
-        working-directory: /tmp/digests
+        name: Create and push manifest list
         run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+          docker buildx imagetools create ${{ env.REGISTRY_IMAGE }}:latest \
+            ${{ env.REGISTRY_IMAGE }}:linux/amd64 \
+            ${{ env.REGISTRY_IMAGE }}:linux/arm64
       -
         name: Inspect image
         run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:latest
