--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,11 +21,16 @@ jobs:
             tag: amd64
           - platform: linux/arm64
             tag: arm64
-
     steps:
       -
         name: Checkout
         uses: actions/checkout@v4
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -40,6 +45,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build image
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -59,22 +65,49 @@ jobs:
           target: discordsearchscraper:${{ matrix.tag }}
           overwrite: true
       -
-        name: Tag image
-        run: |
-          docker tag discordsearchscraper:${{ matrix.tag }} ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
+        name: Push image by digest
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
       -
-        name: Push image
+        name: Export digest
         run: |
-          docker push ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      -
+        name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ matrix.tag }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
 
   merge:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
+      -
+        name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/digests
+          pattern: digests-*
+          merge-multiple: true
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -82,12 +115,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Create and push manifest list
+        name: Create manifest list and push
+        working-directory: /tmp/digests
         run: |
-          docker buildx imagetools create ${{ env.REGISTRY_IMAGE }}:latest \
-            ${{ env.REGISTRY_IMAGE }}:amd64 \
-            ${{ env.REGISTRY_IMAGE }}:arm64
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
       -
         name: Inspect image
         run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:latest
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
