--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,16 +44,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build image
+        name: Build and push image
         id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           platforms: ${{ matrix.platform }}
-          push: false
-          load: true
-          tags: discordsearchscraper:${{ matrix.tag }}
+          push: true
+          tags: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
       -
         name: docker-slim
         uses: kitabisa/docker-slim-action@v1.1.1
@@ -62,23 +61,14 @@ jobs:
           DSLIM_PULL: false
           DSLIM_IMAGE_BUILD_ARCH: ${{ matrix.tag }}
         with:
-          target: discordsearchscraper:${{ matrix.tag }}
+          target: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
           overwrite: true
-      -
-        name: Push image by digest
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: ${{ matrix.platform }}
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
       -
         name: Export digest
         run: |
           mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
+          digest=$(docker inspect --format='{{index .RepoDigests 0}}' ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }})
+          touch "/tmp/digests/${digest#*@}"
       -
         name: Upload digest
         uses: actions/upload-artifact@v4
@@ -119,7 +109,7 @@ jobs:
         working-directory: /tmp/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+            $(cat *)
       -
         name: Inspect image
         run: |
