--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,7 +58,7 @@ jobs:
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
-          DSLIM_PULL: false
+          DSLIM_PULL: true
           DSLIM_IMAGE_BUILD_ARCH: ${{ matrix.tag }}
         with:
           target: ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }}
