--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,6 +73,13 @@ jobs:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+      - 
+        name: Push slimmed image by digest
+        run: |
+          image_id=$(docker images --format "{{.ID}}" ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }})
+          digest=$(docker inspect --format='{{index .RepoDigests 0}}' $image_id)
+          docker tag $image_id ${{ env.REGISTRY_IMAGE }}@${digest}
+          docker push ${{ env.REGISTRY_IMAGE }}@${digest}
       -
         name: Export digest
         run: |
