--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,110 +6,64 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  REGISTRY_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper
-
 jobs:
+
   build:
+  
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - platform: linux/amd64
-            tag: amd64
-          - platform: linux/arm64
-            tag: arm64
+
+    permissions:
+      actions: write
+      contents: read
+          
     steps:
       -
         name: Checkout
         uses: actions/checkout@v4
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build image
-        id: build
+        name: Build image (amd64)
         uses: docker/build-push-action@v5
         with:
-          context: .
           file: ./Dockerfile
-          platforms: ${{ matrix.platform }}
+          pull: false
           push: false
           load: true
-          tags: discordsearchscraper:${{ matrix.tag }}
+          tags: discordsearchscraper:amd64
+          platforms: linux/amd64
       -
-        name: docker-slim
+        name: docker-slim (amd64)
         uses: kitabisa/docker-slim-action@v1.1.1
         env:
           DSLIM_HTTP_PROBE: false
           DSLIM_PULL: false
-          DSLIM_IMAGE_BUILD_ARCH: ${{ matrix.tag }}
+          DSLIM_IMAGE_BUILD_ARCH: amd64
         with:
-          target: discordsearchscraper:${{ matrix.tag }}
+          target: discordsearchscraper:amd64
           overwrite: true
-      - run: |
-          docker image ls --digests discordsearchscraper:${{ matrix.tag }}
       -
-        name: Push image by digest
+        name: Build image (arm64)
         uses: docker/build-push-action@v5
         with:
-          context: .
           file: ./Dockerfile
-          platforms: ${{ matrix.platform }}
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          pull: false
+          push: false
+          load: true
+          tags: discordsearchscraper:arm64
+          platforms: linux/arm64
       -
-        name: Export digest
-        run: |
-          mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
-      -
-        name: Upload digest
-        uses: actions/upload-artifact@v4
+        name: docker-slim (arm64)
+        uses: kitabisa/docker-slim-action@v1.1.1
+        env:
+          DSLIM_HTTP_PROBE: false
+          DSLIM_PULL: false
+          DSLIM_IMAGE_BUILD_ARCH: arm64
         with:
-          name: digests-${{ matrix.tag }}
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
-
-  merge:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      -
-        name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/digests
-          pattern: digests-*
-          merge-multiple: true
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
+          target: discordsearchscraper:arm64
+          overwrite: true
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -117,12 +71,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Create manifest list and push
-        working-directory: /tmp/digests
+        name: Push images to Docker Hub
         run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+          docker tag discordsearchscraper:amd64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker tag discordsearchscraper:arm64 ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
       -
-        name: Inspect image
+        name: Create and push manifest list
         run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker manifest create ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:amd64 \
+            --amend ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:arm64
+          docker manifest push ${{ secrets.DOCKERHUB_USERNAME }}/discordsearchscraper:latest
